--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
         }
     ],
     "autoload": {
-        "psr-4": { "COP\\Client\\" : "src/" }
+        "psr-4": { "COP\\" : "src/" }
     },
     "extra": {
         "laravel": {
